# integration-eng-exercise-python

./: fix_html_nesting.py  integration-entryfile.html  integration-exercise.py  pyproject.toml
integration_eng_exercise_python/: inventory_utils.py  s3_helper.py
